--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -39,7 +39,7 @@
       <br>
       <section class="jumbotron text-center">
           <div class="container">
-            <h1 class="ods-title">ODS 6</h1>
+            <h1 class="ods-title">ODS 6 - Control</h1>
             <h1 class="ods-title">Agua limpia y saneamiento</h1>
             <br>
             <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
